feat: Sort game history responses by chronological order